# CapabilityAccessManagerMonitor

./: .gitignore  CapabilityAccessManagerMonitor.sln  README.md
CapabilityAccessManagerMonitor/: CMakeLists.txt  CapabilityAccessManagerMonitor.vcxproj  CapabilityAccessManagerMonitor.vcxproj.filters  README.md  alert_manager.cpp  alert_manager.h  analyzer.cpp  analyzer.h  baseline.cpp  baseline.h  baseline.txt  detector.cpp  detector.h  logger.cpp  logger.h  main.cpp  service_main.cpp  snapshot.cpp  snapshot.h  utils.cpp  utils.h
